# drishti-jvm

./: .gitignore  Cargo.toml  PLAN.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/drishti-actuator/: Cargo.toml
crates/drishti-actuator/src/: client.rs  converter.rs  health.rs  lib.rs  logfile.rs  normalize.rs  prometheus.rs  threads.rs
crates/drishti-actuator/tests/: fixture_tests.rs
crates/drishti-actuator/tests/fixtures/: prometheus.txt
crates/drishti-core/: Cargo.toml
crates/drishti-core/src/: anomaly.rs  detectors.rs  lib.rs  model.rs  persistence.rs  recommend.rs  rules.rs  targets.rs  timeseries.rs
crates/drishti-gclog/: Cargo.toml
crates/drishti-gclog/src/: g1.rs  lib.rs  parser.rs  shenandoah.rs  tailer.rs  zgc.rs
crates/drishti-gclog/tests/: fixture_tests.rs
crates/drishti-jolokia/: Cargo.toml
crates/drishti-jolokia/src/: client.rs  converter.rs  lib.rs  request.rs  response.rs
crates/drishti-jolokia/tests/: fixture_tests.rs
crates/drishti-jolokia/tests/fixtures/: bulk_response.json
crates/drishti-tui/: Cargo.toml
crates/drishti-tui/src/: action.rs  app.rs  collector.rs  config.rs  main.rs  profiler.rs
crates/drishti-tui/src/components/: footer.rs  header.rs  help.rs  mod.rs
crates/drishti-tui/src/tabs/: console.rs  db.rs  http.rs  logs.rs  mbeans.rs  memory.rs  mod.rs  overview.rs  profiler.rs  recommendations.rs  threads.rs
docker/: Dockerfile.petclinic  docker-compose.yml
fixtures/: README.md
scripts/: api-cheatsheet.sh  e2e-local.sh  grab-gclog.sh  setup-env.sh  stress-test.sh  verify-sources.sh
