[workspace]
resolver = "2"
members = [
    "crates/drishti-core",
    "crates/drishti-jolokia",
    "crates/drishti-actuator",
    "crates/drishti-gclog",
    "crates/drishti-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Piyoosh"]
repository = "https://github.com/piyoosh/drishti-jvm"
description = "A Rust + Ratatui TUI for JVM/Spring Boot monitoring, anomaly detection, and tuning recommendations"

[workspace.dependencies]
# ── Async runtime ──────────────────────────────────────────
tokio = { version = "1.45", features = [
    "rt-multi-thread", "macros", "time", "sync", "net", "io-util", "fs", "signal"
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# ── HTTP client ────────────────────────────────────────────
reqwest = { version = "0.12", default-features = false, features = [
    "json", "rustls-tls"
] }

# ── Serialization ──────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Time ───────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

# ── TUI ────────────────────────────────────────────────────
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# ── Parsing ────────────────────────────────────────────────
nom = "7"
regex = "1"

# ── Config ─────────────────────────────────────────────────
figment = { version = "0.10", features = ["toml", "env"] }

# ── Concurrency ────────────────────────────────────────────
arc-swap = "1"

# ── Error handling ─────────────────────────────────────────
anyhow = "1"
thiserror = "2"
color-eyre = "0.6"

# ── Logging / tracing ─────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── CLI ────────────────────────────────────────────────────
clap = { version = "4", features = ["derive"] }

# ── Database ───────────────────────────────────────────────
rusqlite = { version = "0.32", features = ["bundled"] }

# ── Workspace crates (inter-crate deps) ───────────────────
drishti-core = { path = "crates/drishti-core" }
drishti-jolokia = { path = "crates/drishti-jolokia" }
drishti-actuator = { path = "crates/drishti-actuator" }
drishti-gclog = { path = "crates/drishti-gclog" }
