[package]
name = "drishti-actuator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spring-boot", "actuator", "prometheus", "jvm", "monitoring"]
categories = ["api-bindings"]
description = "Spring Boot Actuator client for drishti-jvm — metrics, prometheus scraping, health, thread dumps"

[dependencies]
drishti-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
