[package]
name = "drishti-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data model, time-series storage, anomaly detection, and JVM tuning recommendations for drishti-jvm"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true, optional = true }

[features]
default = []
persistence = ["rusqlite"]

[dev-dependencies]
anyhow = { workspace = true }
