[package]
name = "drishti-jvm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["jvm", "tui", "spring-boot", "monitoring", "ratatui"]
categories = ["command-line-utilities", "development-tools::profiling"]
description = "दृष्टि — a Ratatui TUI for JVM/Spring Boot monitoring, anomaly detection, and tuning recommendations"

[[bin]]
name = "drishti-jvm"
path = "src/main.rs"

[features]
# Enable SQLite persistence of snapshots via --db <path>
persistence = ["drishti-core/persistence"]

[dependencies]
drishti-core = { workspace = true }
drishti-jolokia = { workspace = true }
drishti-actuator = { workspace = true }
drishti-gclog = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
arc-swap = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
